data/derived/comb/progs/unify/prog8003.ml.out
Characters 51-56:
  let fixpoint (f,b) = wwhile(if f b = b then b else false, b);;
                                                     ^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
